--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,7 @@
         
         .h2 { 
             font-size: 28px;
-            font-wight: bold;
+            font-weight: bold;
             text-align: center;
             padding-bottom: 0px;
             margin-bottom: -150px;
