--- a/styles.css
+++ b/styles.css
@@ -94,6 +94,7 @@
     }
     
     .video-container.shifted .p1 {
+      font-size: 60px;
       margin-bottom: -44px;
       color: red;
       font-style: italic;
