--- a/styles.css
+++ b/styles.css
@@ -96,8 +96,8 @@
     .video-container.shifted .p1 {
       font-family: 'P5R Menu Font', sans-serif;
       font-size: 60px;
-      margin-bottom: -44px;
-      color: red;
+      margin-bottom: -55px;
+      color: white;
       font-style: italic;
       text-transform: uppercase;
       animation: flicker 2.5s infinite;
