--- a/styles.css
+++ b/styles.css
@@ -16,12 +16,12 @@
         
         .h1 {
             background-color: red;
-            font-size: 36px;
+            font-size: 50px;
             text-align: center;
             margin-bottom: 50px;
             margin-right: -50px;
             margin-left: -60px;
-            padding: 0px;
+            padding: 0;
             color: #fff;
             transition: 0.3s ease-in-out;
            }
@@ -40,10 +40,10 @@
            
         
         .h2 { 
-            font-family: 'Markin LT', sans-serif;
-            font-size: 28px;
+            font-size: 50px;
             font-weight: bold;
-            margin-top: 170px;
+            margin-top: 150px;
+            margin-bottom: -190px;
             text-align: center;
             padding: 0;
            
@@ -51,8 +51,9 @@
             }
             
        .h2.shifted {
-            margin-top: 170px;
-            font-style: italic;
+            font-family: 'p5hatty', sans-serif;
+            margin-top: 150px;
+            margin-bottom: -190px;
             text-transform: uppercase;
             text-decoration: underline;
             text-decoration-color: red;
@@ -97,7 +98,6 @@
     
     .video-container.shifted .p1 {
       font-family: 'P5R Menu Font', sans-serif;
-      font-size: 60px;
       margin-bottom: -70px;
       color: white;
       text-transform: uppercase;
@@ -108,7 +108,6 @@
 
     .video-container.shifted .p2 {
       font-family: 'P5R Menu Font', sans-serif;
-      font-size: 60px;
       margin-top: 150px;
       color: white;
       text-transform: uppercase;
@@ -119,7 +118,6 @@
 
     .video-container.shifted .p3 {
       font-family: 'P5R Menu Font', sans-serif;
-      font-size: 60px;
       margin-top: 150px;
       color: white;
       text-transform: uppercase;
@@ -240,7 +238,7 @@
 }
 
 @font-face {
-    font-family: 'p5hatty ';
+    font-family: 'p5hatty';
     src: url('fonts/p5hatty-1.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
