--- a/styles.css
+++ b/styles.css
@@ -1,332 +1,370 @@
-  * {
-            box-sizing: border-box;
-            margin-top: 0;
-            padding: 5px;
-        }
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            padding: 15px; 
-        }
-        
-      body.sidebar-open {
-    background-color: black; /* Darkened background when sidebar is open */
-    transition: background-color 0.3s ease-in-out; /* Optional smooth transition */
+* {
+  box-sizing: border-box;
+  margin-top: 0;
+  padding: 5px;
 }
-        
-        .h1 {
-            background-color: red;
-            font-size: 50px;
-            text-align: center;
-            margin-bottom: 50px;
-            margin-right: -50px;
-            margin-left: -60px;
-            padding: 0;
-            color: #fff;
-            transition: 0.3s ease-in-out;
-           }
-         
-         .h1.shifted {
-           background-color: black;
-           outline: red double 5px;
-           font-style: italic;
-           padding: 0;
-           color: white;
-           margin: auto;
-           margin-left: 300px;
-           animation: flicker 15.5s infinite;
-           
-         }
-           
-        
-        .h2 { 
-            font-family: 'p5hatty', sans-serif;
-            text-transform: uppercase;
-            font-size: 50px;
-            font-weight: bold;
-            margin-top: 150px;
-            margin-bottom: -190px;
-            text-align: center;
-            padding: 0;
-           
-            transition: 0.3s ease-in-out;
-            }
-            
-       .h2.shifted {
-            font-family: 'P5R Menu Font', sans-serif;
-            margin-top: 150px;
-            margin-bottom: -190px;
-            text-decoration-color: red;
-            color: white;
-            margin-right: 300px;
-            animation: flicker 10.5s infinite;
-            }
-              
-        .p1 {
-           font-family: 'Markin LT', sans-serif;
-           text-transform: uppercase;
-           font-size: 60px;
-           margin-bottom: -70px;
-           font-weight: bold;
-           
-        }
-        .p2 {
-           font-family: 'Markin LT', sans-serif;
-           text-transform: uppercase;
-           font-size: 60px;
-           margin-top: 150px;
-           font-weight: bold;
-           
-           }
-           
-        .p3 {
-           font-family: 'Markin LT', sans-serif;
-           text-transform: uppercase;
-           font-size: 60px;
-           margin-top: 150px;
-           font-weight: bold;
-           
-           }
-     
-        /* Container for the videos */
-        .video-container {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            padding: 200px;
-            transition: 0.3s ease-in-out;
-        }
-        
-    .video-container.shifted {
-      margin-left: 100px;
-      margin-right: -100px;
-    }
-    
-    .video-container.shifted .p1 {
-      font-family: 'P5R Menu Font', sans-serif;
-      margin-bottom: -70px;
-      color: white;
-      text-transform: uppercase;
-      animation: flicker 2.5s infinite;
-      position: relative;
-      z-index: 10;
-    }
+body {
+  font-family: Arial, sans-serif;
+  background-color: #f4f4f4;
+  padding: 15px;
+}
 
-    .video-container.shifted .p2 {
-      font-family: 'P5R Menu Font', sans-serif;
-      margin-top: 150px;
-      color: white;
-      text-transform: uppercase;
-      animation: flicker 2.5s infinite;
-      position: relative;
-      z-index: 10;
-    }
+body.sidebar-open {
+  background-color: black; /* Darkened background when sidebar is open */
+  transition: background-color 0.3s ease-in-out; /* Optional smooth transition */
+}
 
-    .video-container.shifted .p3 {
-      font-family: 'P5R Menu Font', sans-serif;
-      margin-top: 150px;
-      color: white;
-      text-transform: uppercase;
-      animation: flicker 2.5s infinite;
-      position: relative;
-      z-index: 10;
-    }
-         
-        /* Styles for the iframe */
-        iframe {
-            width: 1080px;  /* Width of the video */
-            height: 400px;
-            border: none;   /* Remove border */
-            border-radius: 10px; /* Round corners */
-            background-color: #000; /* Background color */
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); /* Add shadow */
-            transition: transform 0.3s; /* Smooth scaling effect */
-            z-index: 1;
-        }
-      
-        iframe:hover {
-            transform: scale(1.05); /* Scale effect on hover */
-        }
-        
-        iframe.sidebar-open {
-            border: 5px solid red;
-            outline: white solid 5px;
-        }
-        
-   .sidebar {
-    background-color: #1e1e1e;
-    width: 250px;
-    height: 100%;
-    position: fixed;
-    top: 0;
-    left: -210px; /* Initially hidden */
-    transition: left 0.3s;
-    padding: 20px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    z-index: 1000;
+.h1 {
+  background-color: red;
+  font-size: 50px;
+  text-align: center;
+  margin-bottom: 50px;
+  margin-right: -50px;
+  margin-left: -60px;
+  padding: 0;
+  color: #fff;
+  transition: 0.3s ease-in-out;
+}
+
+.h1.shifted {
+  background-color: black;
+  outline: red double 5px;
+  font-style: italic;
+  padding: 0;
+  color: white;
+  margin: auto;
+  margin-left: 300px;
+  animation: flicker 15.5s infinite;
+}
+
+.h2 {
+  font-family: "p5hatty", sans-serif;
+  text-transform: uppercase;
+  font-size: 50px;
+  font-weight: bold;
+  margin-top: 150px;
+  margin-bottom: -190px;
+  text-align: center;
+  padding: 0;
+  transition: 0.3s ease-in-out;
+}
+
+.h2.shifted {
+  font-family: "P5R Menu Font", sans-serif;
+  margin-top: 150px;
+  margin-bottom: -190px;
+  text-decoration-color: red;
+  color: white;
+  margin-right: 300px;
+  animation: flicker 10.5s infinite;
+}
+
+.p1 {
+  font-family: "Markin LT", sans-serif;
+  text-transform: uppercase;
+  font-size: 60px;
+  margin-bottom: -70px;
+  font-weight: bold;
+}
+.p2 {
+  font-family: "Markin LT", sans-serif;
+  text-transform: uppercase;
+  font-size: 60px;
+  margin-top: 150px;
+  font-weight: bold;
+}
+
+.p3 {
+  font-family: "Markin LT", sans-serif;
+  text-transform: uppercase;
+  font-size: 60px;
+  margin-top: 150px;
+  font-weight: bold;
+}
+
+/* Container for the videos */
+.video-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding: 200px;
+  transition: 0.3s ease-in-out;
+}
+
+.video-container.shifted {
+  margin-left: 100px;
+  margin-right: -100px;
+}
+
+.video-container.shifted .p1 {
+  font-family: "P5R Menu Font", sans-serif;
+  margin-bottom: -70px;
+  color: white;
+  text-transform: uppercase;
+  animation: flicker 2.5s infinite;
+  position: relative;
+  z-index: 10;
+}
+
+.video-container.shifted .p2 {
+  font-family: "P5R Menu Font", sans-serif;
+  margin-top: 150px;
+  color: white;
+  text-transform: uppercase;
+  animation: flicker 2.5s infinite;
+  position: relative;
+  z-index: 10;
+}
+
+.video-container.shifted .p3 {
+  font-family: "P5R Menu Font", sans-serif;
+  margin-top: 150px;
+  color: white;
+  text-transform: uppercase;
+  animation: flicker 2.5s infinite;
+  position: relative;
+  z-index: 10;
+}
+
+/* Styles for the iframe */
+iframe {
+  width: 1080px; /* Width of the video */
+  height: 400px;
+  border: none; /* Remove border */
+  border-radius: 10px; /* Round corners */
+  background-color: #000; /* Background color */
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); /* Add shadow */
+  transition: transform 0.3s; /* Smooth scaling effect */
+  z-index: 1;
+}
+
+iframe:hover {
+  transform: scale(1.05); /* Scale effect on hover */
+}
+
+iframe.sidebar-open {
+  border: 5px solid red;
+  outline: white solid 5px;
+}
+
+.sidebar {
+  background-color: #1e1e1e;
+  width: 250px;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: -210px; /* Initially hidden */
+  transition: left 0.3s;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  z-index: 1000;
 }
 
 .sidebar a {
-    background-color:rgba(251,33,3,0.5);
-    color: white;
-    text-decoration: none;
-    display: block;
-    margin: 0px;
-    margin-top: 5px;
-    margin-right: 20px;
-    margin-left: 20px;
-    font-size: 1.2rem;
-    text-align: center;
-    padding: 15px;
-    transition: transform 0.3s ease-in-out;
+  font-family: "P5R Menu Font", sans-serif;
+  background-color: white;
+  border: 3px solid black;
+  border: 3px solid red;
+  color: black;
+  text-shadow: 0px 0px 5px tomato;
+  text-decoration: none;
+  display: block;
+  margin: 0px;
+  margin-top: 12px;
+  margin-right: 20px;
+  margin-left: 20px;
+  font-size: 20px;
+  text-align: center;
+  padding: 15px;
+  transition: transform 0.3s ease-in-out;
 }
 
 .sidebar a:hover {
-    color: #fff;
-    transform: scale(1.1) rotate(-3deg);
+  color: red;
+  transform: scale(1.1) rotate(-3deg);
 }
 
 .sidebar.open {
-    left: 0; /* Slide in the sidebar */
+  left: 0; /* Slide in the sidebar */
 }
 
 /* Toggle Button Styles */
 .toggle-btn {
-    position: fixed;
-    top: 20px;
-    left: 20px;
-    background-color: #e3000b;
-    color: white;
-    border: none;
-    padding: 10px 15px;
-    font-size: 1.2rem;
-    cursor: pointer;
-    z-index: 1100;
-    transition: transform 0.3s ease-in-out;
+  position: fixed;
+  top: 20px;
+  left: 20px;
+  background-color: #e3000b;
+  color: white;
+  border: none;
+  padding: 10px 15px;
+  font-size: 1.2rem;
+  cursor: pointer;
+  z-index: 1100;
+  transition: transform 0.3s ease-in-out;
 }
 
 .toggle-btn:hover {
-    transform: scale(1.1) rotate(-3deg);
+  transform: scale(1.1) rotate(-3deg);
 }
 
- @keyframes flicker {
-    0%, 19%, 21%, 23%, 25%, 54%, 56%, 100% {
-        opacity: 1;
-    }
-    20%, 24%, 55% {
-        opacity: 0;
-    }
+@keyframes flicker {
+  0%,
+  19%,
+  21%,
+  23%,
+  25%,
+  54%,
+  56%,
+  100% {
+    opacity: 1;
+  }
+  20%,
+  24%,
+  55% {
+    opacity: 0;
+  }
 }
 
- @media (max-width: 600px) {
-    body {
-        padding: 8px; /* Reduce padding */
-        font-size: 14px; /* Global font-size adjustment */
-    }
+@media (max-width: 600px) {
+  body {
+    padding: 8px; /* Reduce padding */
+    font-size: 14px; /* Global font-size adjustment */
+  }
 
-    .h1 {
-        font-size: 25px; /* Decrease header size */
-        margin: 0 5px; /* Adjust margins */
-    }
+  .h1 {
+    font-size: 25px;
+    margin: 0 5px;
+    margin-top: 40px;
+  }
 
-    .h1.shifted {
-        font-size: 22px; /* Adjust font size for shifted h1 */
-        margin-left: 50px; /* Less aggressive shift */
-        margin-right: 0;
-        padding: 5px; /* Small padding for better visibility */
-        background-color: black;
-        outline: red double 3px; /* Thinner outline */
-        animation: flicker 12s infinite; /* Shorten flicker duration */
-    }
+  .h1.shifted {
+    font-size: 20px; /* Adjust font size for shifted h1 */
+    margin-top: 50px;
+    margin-left: 80px; /* Less aggressive shift */
+    margin-right: px;
+    padding: 0; /* Small padding for better visibility */
+    background-color: black;
+    outline: red double 3px; /* Thinner outline */
+  }
 
-    .h2 {
-        font-size: 20px; /* Decrease header size */
-        margin: 0 5px;
-    }
-
-    .h2.shifted {
-        font-size: 18px; /* Smaller font for shifted h2 */
-        margin-right: 50px; /* Reduce right margin */
-        margin-left: 20px; /* Add left margin */
-        text-decoration-color: red;
-        animation: flicker 8s infinite; /* Slightly faster animation */
-    }
-
-    .p1, .p2, .p3 {
-        font-size: 30px; /* Decrease paragraph size */
-        margin-top: 40px; /* Adjust spacing */
-    }
-
-    .video-container {
-        padding: 10px; /* Reduce padding */
-        flex-direction: column; /* Stack videos vertically */
-    }
-
-    .video-container.shifted {
-        margin-left: 0; /* Center container */
-        margin-right: 0;
-        padding: 10px;
-    }
-
-    .video-container.shifted .p1,
-    .video-container.shifted .p2,
-    .video-container.shifted .p3 {
-        font-size: 20px; /* Smaller font size */
-        margin-left: 0; /* Center text */
-        margin-right: 0;
-        animation: flicker 5s infinite; /* Shorter flicker animation */
-    }
-
-    iframe {
-        width: 90%;  /* Narrow iframe for mobile */
-        height: 200px; /* Smaller iframe */
-    }
-
-    iframe.sidebar-open {
-        border: 3px solid red; /* Thinner border for mobile */
-        outline: white solid 3px; /* Smaller outline */
-    }
-
-    .sidebar {
-        width: 80px; /* Narrow the sidebar */
-    }
-
-    .sidebar a {
-        font-size: 0.8rem; /* Reduce link font size */
-        padding: 8px; /* Smaller padding for links */
-    }
-
-    .toggle-btn {
-        font-size: 0.8rem; /* Smaller button */
-        padding: 5px 8px;
-    }
-
-    .toggle-btn:hover {
-        transform: scale(1.05) rotate(-2deg); /* Less intense hover effect */
-    }
-}
-
-@font-face {
-    font-family: 'Markin LT';
-    src: url('fonts/MarkinLTUltraBold.woff2') format('woff2'), /* Super Modern Browsers */
-         url('fonts/MarkinLTUltraBold.woff') format('woff'), /* Modern Browsers */
-         url('fonts/MarkinLTUltraBold.ttf') format('truetype'); /* Safari, Android, iOS */
+  .h2 {
+    font-family: "p5hatty", sans-serif;
+    text-transform: uppercase;
+    font-size: 24px;
     font-weight: bold;
-    font-style: normal;
+    margin-top: 100px;
+    margin-bottom: 80px;
+    text-align: center;
+    padding: 0;
+  }
+
+  .h2.shifted {
+    margin-right: 50px; /* Reduce right margin */
+    margin-left: 100px;
+    margin-top: 100px;
+    margin-bottom: 20px;
+    text-decoration-color: red;
+  }
+
+  .p1 {
+    font-size: 30px;
+    margin-bottom: -40px;
+    text-align: center;
+  }
+
+  .p2 {
+    font-size: 30px;
+    margin-bottom: -5px;
+    text-align: center;
+  }
+
+  .p3 {
+    font-size: 30px;
+    margin-bottom: -5px;
+    text-align: center;
+  }
+
+  .video-container {
+    padding: 10px; /* Reduce padding */
+    flex-direction: column; /* Stack videos vertically */
+  }
+
+  .video-container.shifted {
+    margin-left: 35px; /* Center container */
+    margin-right: -20px;
+    padding: 50px;
+  }
+
+  .video-container.shifted .p1 {
+    margin-bottom: -30px;
+  }
+
+  .video-container.shifted .p2 {
+    margin-bottom: 5px;
+  }
+
+  .video-container.shifted .p3 {
+    margin-bottom: 5px;
+  }
+
+  iframe {
+    width: 100%; /* Narrow iframe for mobile */
+    height: 200px; /* Smaller iframe */
+  }
+
+  iframe.sidebar-open {
+    border: 3px solid red; /* Thinner border for mobile */
+    outline: white solid 3px; /* Smaller outline */
+  }
+
+  .sidebar {
+    width: 100px;
+  }
+
+  .sidebar a {
+    margin-top: 45px;
+    margin-bottom: -30px;
+    margin-left: 50px;
+    padding: 15px 25px;
+  }
+
+  .sidebar.open {
+    left: -60px;
+  }
+
+  .toggle-btn {
+    font-size: 0.8rem; /* Smaller button */
+    padding: 10px 15px;
+  }
+
+  .toggle-btn:hover {
+    transform: scale(1.05) rotate(-2deg); /* Less intense hover effect */
+  }
 }
 
 @font-face {
-    font-family: 'P5R Menu Font';
-    src: url('fonts/Persona5MenuFontPrototype-Regular.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
+  font-family: "Markin LT";
+  src:
+    url("fonts/MarkinLTUltraBold.woff2") format("woff2"),
+    /* Super Modern Browsers */ url("fonts/MarkinLTUltraBold.woff")
+      format("woff"),
+    /* Modern Browsers */ url("fonts/MarkinLTUltraBold.ttf") format("truetype"); /* Safari, Android, iOS */
+  font-weight: bold;
+  font-style: normal;
 }
 
 @font-face {
-    font-family: 'p5hatty';
-    src: url('fonts/p5hatty-1.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
+  font-family: "P5R Menu Font";
+  src: url("fonts/Persona5MenuFontPrototype-Regular.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "p5hatty";
+  src: url("fonts/p5hatty-1.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
 }
